# model/common/request/concert.go
@@ -14,3 +14,8 @@ type ConcertCancelReq struct {
 	ConcertID    string `json:"concert_id"`    // 提交的演唱会id
 	CancelReason string `json:"cancel_reason"` // 是否通过
 }
+
+type ConcertPublishReq struct {
+	ConcertID string `json:"concert_id"` // 提交的演唱会id
+
+}
